# cli-sysmon

./: .gitignore  README.md  pyproject.toml
src/sysmon_tool/: collector.py  config.py  display.py  main.py  system_monitor.py  updater.py  usage_tracker.py
src/sysmon_tool/collectors/: __init__.py  cpu.py  disk.py  memory.py  network.py  temperature.py  updates.py
