[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon-tool"
version = "0.1.0"
description = "A system health and update monitor"
dependencies = [
    "rich",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sysmon = "sysmon_tool.system_monitor:main"